--- a/HTML/index.html
+++ b/HTML/index.html
@@ -6,14 +6,37 @@
     <title>Document</title>
     <link rel="stylesheet" href="/PROJETO_01/CSS/style.css">
     <script src="/PROJETO_01/JS/index.js" defer></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
 </head>
 <body>
 
     <header>
         <div class="container-header">
+
             <div class="container-img"></div>
-        </div>
+
+        </div><!--container-img-->
     </header>
+
+    <article>
+        <div class="container-background">
+            <div class="container-frase">
+                <h1>
+                    Descubra seu novo lar
+                </h1>
+                <p>Apartamentos modernos com tudo que você sempre sonhou, em uma localização perfeita!</p> 
+            </div>
+            
+            <button class="expanding-border-button">Clique Aqui</button>
+
+
+
+        </div> <!--container-background-->
+
+
+    </article>
 
 </body>
 </html>
