Adicionado a seção de chamada

--- a/HTML/index.html
+++ b/HTML/index.html
@@ -14,29 +14,25 @@
 
     <header>
         <div class="container-header">
-
             <div class="container-img"></div>
-
         </div><!--container-img-->
     </header>
 
-    <article>
-        <div class="container-background">
+    <section>
+        <div class="container-background"> 
             <div class="container-frase">
-                <h1>
-                    Descubra seu novo lar
-                </h1>
+                <h1>Descubra seu novo lar</h1>
                 <p>Apartamentos modernos com tudo que você sempre sonhou, em uma localização perfeita!</p> 
-            </div>
-            
-            <button class="expanding-border-button">Clique Aqui</button>
-
-
-
+            </div>  <!--container-frase-->
+            <button class="botao-background">Clique Aqui</button>
         </div> <!--container-background-->
+    </section>
 
-
-    </article>
+    <section class="container-chamada">
+        <div class="chamada-1">
+            <p>Seu novo endereço está aqui! Apartamentos modernos, confortáveis e com condições especiais de pagamento.</p>
+        </div>
+    </section>
 
 </body>
 </html>
